tests/fail/97-fail-derive-on-enum.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
enum Status {
    Active,
    Inactive,
}

fn main() {}
